# xrb

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  publish-docs.sh
.github/: rustc-problem-matcher.json  rustc_problem_matcher.json  test-problem-matcher.json
.github/workflows/: ci.yml  publish.yml
.trunk/: trunk.yaml
cornflakes/: Cargo.toml
cornflakes/src/: impls.rs  lib.rs  reader.rs  rw.rs  writer.rs
cornflakes/src/implementations/: byte_sizes.rs  mod.rs  rw_bytes.rs
cornflakes/src/traits/: byte_reader.rs  byte_writer.rs  mod.rs
cornflakes/src/util/: mod.rs  reader.rs
src/: big_requests.rs  common.rs  concepts.rs  connection.rs  error_handling.rs  init.rs  lib.rs  macros.rs  message.rs  serialization.rs  trait.rs  traits.rs  unit.rs  util.rs  x11.rs
src/_macros/: _request_schema.rs  error.rs  mod.rs
src/_proto/: ids.rs  mod.rs
src/_proto/messages/: mod.rs
src/_proto/messages/requests/: mod.rs
src/big_requests/: reply.rs  request.rs
src/common/: atom.rs  attribute.rs  mask.rs  masks.rs  res_id.rs  set.rs  string.rs  values.rs  visual.rs  window_configs.rs  wrapper.rs  wrappers.rs
src/common/id/: atoms.rs  mod.rs
src/common/set/: attribute.rs  graphics_options.rs  keyboard_options.rs  window_config.rs  window_configs.rs
src/error_handling/: mod.rs
src/events/: mod.rs
src/events/replies/: mod.rs
src/macros/: _request_schema.rs  bitmask.rs  error.rs  errors.rs  mod.rs  predefine.rs  requests.rs  wrappers.rs
src/proto/: atoms.rs  bitmasks.rs  common.rs  errors.rs  ids.rs  requests.rs
src/proto/messages/: errors.rs  events.rs  replies.rs
src/proto/messages/requests/: create_window.rs  mod.rs
src/protocol/: mod.rs
src/protocol/common/: mod.rs  structures.rs  values.rs
src/protocol/errors/: error_macro.rs  mod.rs
src/protocol/messages/: mod.rs
src/protocol/requests/: create_window.rs  mod.rs
src/protocol/wrappers/: mod.rs  wrapper_macro.rs
src/raw/: mod.rs
src/rw/: errors.rs  mod.rs  read_value.rs  write_value.rs
src/serialization/: errors.rs  mod.rs  read_value.rs  write_value.rs
src/util/: bitmask.rs  mod.rs
src/x/common/: structures.rs
src/x/errors/: error_macro.rs
src/x/requests/: create_window.rs  mod.rs
src/x/wrappers/: mod.rs
src/x11/: error.rs  errors.rs  event.rs  mod.rs  reply.rs  request.rs  traits.rs  wrapper.rs  wrappers.rs
src/x11/common/: masks.rs  mod.rs  string.rs  structures.rs  values.rs  wrappers.rs
src/x11/common/id/: atoms.rs  mod.rs
src/x11/errors/: error_macro.rs  mod.rs
src/x11/id/: atoms.rs
src/x11/reply/: color.rs  font.rs  graphics.rs  input.rs  meta.rs  miscellaneous.rs  window.rs
src/x11/reply/graphics/: config.rs
src/x11/request/: color.rs  font.rs  graphics.rs  input.rs  meta.rs  miscellaneous.rs  window.rs
src/x11/request/graphics/: config.rs
src/x11/requests/: change_save_set.rs  change_window_attributes.rs  circulate_window.rs  create_window.rs  destroy_subwindows.rs  destroy_window.rs  get_geometry.rs  get_window_attributes.rs  map_subwindows.rs  map_window.rs  mod.rs  query_tree.rs  reparent_window.rs  unmap_subwindows.rs  unmap_window.rs
src/x11/wrappers/: mod.rs  wrapper_macro.rs
xrb/: Cargo.toml
xrb-derive-macros/: Cargo.toml
xrb-derive-macros/src/: lib.rs
xrb-proc-macros/: Cargo.toml
xrb-proc-macros/src/: closure.rs  content.rs  definition.rs  derive_parse.rs  lib.rs  message.rs  util.rs
xrb-proc-macros/src/content/: field.rs  length.rs  mod.rs  unused.rs
xrb-proc-macros/src/message/: mod.rs  reply.rs  request.rs
xrb-proc-macros/src/parsing/: databyte.rs  declare_assoc_req.rs  declare_reply.rs  definition.rs  fields.rs  metabyte.rs  mod.rs  opcodes.rs  reply_title.rs  request.rs  request_title.rs
xrb-proc-macros/src/parsing/definition/: mod.rs
xrb/src/: atoms.rs  common.rs  errors.rs  events.rs  general.rs  lib.rs  macros.rs  serialization.rs
xrb/src/proto/: atoms.rs  bitmasks.rs  common.rs  errors.rs  events.rs  mod.rs
xrb/xrb-derive-macros/src/: lib.rs
xrbk/: Cargo.toml
xrbk/src/: datasize.rs  lib.rs  readable.rs  wrap.rs  writable.rs  x11_size.rs
xrbk_macro/: Cargo.toml
xrbk_macro/src/: _content.rs  attribute.rs  content.rs  def.rs  definition.rs  derive.rs  element.rs  ext.rs  impls.rs  lib.rs  metadata.rs  source.rs  ts_ext.rs  util.rs
xrbk_macro/src/attribute/: expansion.rs  parsing.rs
xrbk_macro/src/content/: attributes.rs  field.rs  general.rs  items.rs  let.rs  source.rs  unused.rs
xrbk_macro/src/content/items/: field.rs  iter.rs  let.rs  unused.rs
xrbk_macro/src/def/: expansion.rs  parsing.rs
xrbk_macro/src/definition/: expansion.rs  parsing.rs
xrbk_macro/src/definition/expansion/: datasize.rs  derives.rs  message_trait.rs  partial_eq.rs  readable.rs  trait.rs  writable.rs  x11_size.rs
xrbk_macro/src/derive/: wrapper.rs
xrbk_macro/src/element/: expansion.rs  iter.rs  parsing.rs
xrbk_macro/src/element/expansion/: cornflakes.rs  rw.rs  xrbk.rs
xrbk_macro/src/message/: mod.rs
xrbk_macro/src/source/: expansion.rs  parsing.rs
xrbk_macro_impl/: Cargo.toml
xrbk_macro_impl/src/: definition.rs  error.rs  item.rs  lib.rs  path.rs  token.rs
xrbk_macro_impl/src/token/: delimiter.rs  punct.rs
