[package]
name = "xrs"
version = "0.0.0"
authors = [ "AquariWM <contact@aquariwm.org>", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "A Rust library for X. Currently a name reservation."
license = "MPL-2.0"
keywords = [ "x11", "xorg", "wm", "xcb", "xlib" ]
categories = [ "api-bindings", "asynchronous", "gui", "network-programming", "rendering" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
