# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "xrb"
version = "0.1.0-dev"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "X11 protocol formats, structures, serialization and deserialization."
license = "MPL-2.0"
keywords = [ "x11", "xorg", "xproto", "xrs" ]
categories = [ "api-bindings", "gui", "network-programming", "rendering" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
bitflags = "1.3"
thiserror = "1"
