# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "xrb" # X Rust Bindings
version = "0.1.0-dev"
readme = true
repository = "https://github.com/XdotRS/xrb"
documentation = "https://docs.aquariwm.org/doc/xrb"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "Data structures and (de)serialization for the X11 protocol."
license = "MPL-2.0"
keywords = [ "x11", "xorg", "xproto", "xrs", "window" ]
categories = [ "data-structures", "api-bindings", "encoding" ]

[workspace]
# XRB is defined as a workspace that automatically includes all its path
# dependencies. Currently, that means `xrb-proc-macros` and `cornflakes`.

[dependencies]
bytes = "1" # serialization
cornflakes = "0.0.0" # serialization
bitflags = "1.3" # bit masks - representations of masks
thiserror = "1" # error handling
xrbk_macro = { path = "./xrbk_macro" } # generation of XRB structures
