# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "cornflakes"
version = "0.1.0-dev"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "Utilities for (de)serialization. Created for and used in X Rust Bindings."
license = "MPL-2.0"
keywords = [ "serialization", "encoding", "bytes", "xrb" ]
categories = [ "encoding" ]

[dependencies]
bytes = "1.0"
