# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "cornflakes"
version = "0.0.0-dev"
readme = false
repository = "https://github.com/XdotRS/xrb/tree/main/cornflakes"
documentation = "https://docs.aquariwm.org/doc/cornflakes"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "Utilities for (de)serialization. Created for X Rust Bindings."
license = "MPL-2.0"
keywords = [ "serialization", "encoding", "bytes", "xrb" ]
categories = [ "encoding" ]

[dependencies]
array-init = "2.0"
thiserror = "1.0"
