# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "xrbk"
version = "0.0.1"
readme = false
repository = "https://github.com/XdotRS/xrb/tree/main/xrbk"
documentation = "https://docs.aquariwm.org/doc/xrbk"
authors = ["X.RS", "Antikyth <antikyth at gmail dot com>", "Syudagye"]
edition = "2021"
description = "Development toolkit for implementing X11 protocols for XRB."
license = "MPL-2.0"
keywords = ["serialization", "encoding", "bytes"]
categories = ["encoding"]

[dependencies]
thiserror = "1.0"
bytes = "1.2"
num-traits = "0.2"
