# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "xrbk_macro_impl"
version = "0.0.1"
repository = "https://github.com/XdotRS/xrb/tree/main/xrbk_macro_impl"
documentation = "https://docs.aquariwm.org/doc/xrbk_macro_impl"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "Not for general use. The implementation of XRBK macro."
license = "MPL-2.0"
keywords = [ "proc-macro" ]
categories = [ "parser-implementations" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
proc-macro2 = { version = "1.0.50", features = ["span-locations"] }
quote = "1.0.23"
